# futures

./: .clang-format  .gitignore  404.html  CMakeLists.txt  Doxyfile  README.md  find_cpp_modules.cmake  futures-config.cmake.in  index.html  mkdocs.yml  sitemap.xml
dev-tools/amalgamator/: CMakeLists.txt  config.hpp  filesystem.hpp  main.cpp
dev-tools/linter/: CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  filesystem.cpp  filesystem.hpp  linter.cpp  main.cpp  test_template.cpp
examples/: .clang-format  CMakeLists.txt  algorithms.cpp  conjunctions_unwrap.cpp  continuations.cpp  continuations_unwrap.cpp  disjunctions.cpp  disjunctions_unwrap.cpp  interoperability.cpp  launching.cpp  quickstart.cpp  shared.cpp  stoppable.cpp
examples/adaptors/: conjunctions.cpp  conjunctions_unwrap.cpp  continuations.cpp  continuations_unwrap.cpp  disjunctions.cpp  disjunctions_unwrap.cpp  task_graph.cpp
examples/algorithm/: algorithms.cpp
examples/future_types/: continuable.cpp  interoperability.cpp  launching.cpp  packaged_task.cpp  promises.cpp  schedule.cpp  shared.cpp  stoppable.cpp  waiting.cpp
examples/motivation/: polling_continuation.cpp
examples/networking/: asio.cpp  echo_server.cpp
examples/quickstart/: algorithms.cpp  conjunctions.cpp  continuations.cpp  disjunctions.cpp  launching.cpp
include/: CMakeLists.txt
include/futures/: adaptor.hpp  algorithm.hpp  await.hpp  basic_future.hpp  config.hpp  error.hpp  executor.hpp  future.hpp  future_error.hpp  future_options.hpp  future_options_args.hpp  future_status.hpp  futures.hpp  is_ready.hpp  launch.hpp  packaged_task.hpp  promise.hpp  stop_token.hpp  throw.hpp  traits.hpp  wait_for_all.hpp  wait_for_any.hpp
include/futures/adaptor/: bind_executor_to_lambda.hpp  make_ready_future.hpp  ready_future.hpp  then.hpp  when_all.hpp  when_any.hpp  when_any_result.hpp
include/futures/algorithm/: all_of.hpp  any_of.hpp  compare.hpp  comparisons.hpp  count.hpp  count_if.hpp  find.hpp  find_if.hpp  find_if_not.hpp  for_each.hpp  none_of.hpp  partitioner.hpp  policies.hpp  reduce.hpp  traits.hpp
include/futures/config/: asio_include.hpp
include/futures/detail/: config.hpp  continuations_source.hpp  future.hpp  future_launcher.hpp  future_options_list.hpp  future_options_set.hpp  future_state.hpp  is_ready.hpp  launch.hpp  maybe_empty_continuations_source.hpp  maybe_empty_function.hpp  maybe_empty_stop_source.hpp  move_if_not_shared.hpp  operation_state.hpp  operation_state_storage.hpp  share_if_not_shared.hpp  shared_state.hpp  shared_task.hpp  throw_exception.hpp  variant_state.hpp  waiter_for_any.hpp
include/futures/executor/: any_executor.hpp  default_executor.hpp  execute.hpp  hardware_concurrency.hpp  inline_executor.hpp  is_execution_context.hpp  is_executor.hpp  new_thread_executor.hpp  thread_pool.hpp
include/futures/futures/: async.hpp  await.hpp  basic_future.hpp  future_error.hpp  future_options.hpp  future_options_args.hpp  is_ready.hpp  launch.hpp  packaged_task.hpp  promise.hpp  stop_token.hpp  wait_for_all.hpp  wait_for_any.hpp
include/futures/impl/: config.hpp  error.hpp  error.ipp  future.hpp  future.ipp  future_error.ipp  is_ready.hpp  launch.hpp  src.hpp  throw.hpp  throw.ipp  wait_for_all.hpp  wait_for_any.hpp
include/futures/traits/: future_value.hpp  has_executor.hpp  has_ready_notifier.hpp  has_stop_token.hpp  is_always_deferred.hpp  is_continuable.hpp  is_future.hpp  is_future_like.hpp  is_shared_future.hpp  is_stoppable.hpp  to_future.hpp
source/: CMakeLists.txt
source/futures/: algorithm.h  futures.h  src.cpp
source/futures-compiled/: src.cpp
source/futures/adaptor/: ready_future.h  then.h  when_all.h  when_any.h  when_any_result.h
source/futures/algorithm/: algorithm_traits.h  all_of.h  any_of.h  count.h  count_if.h  find.h  find_if.h  find_if_not.h  for_each.h  none_of.h  partitioner.h  policies.h  reduce.h
source/futures/config/: asio-compile.h  asio_include.h  small_vector_include.h
source/futures/detail/: asio-src.cpp  asio_include.h  basic_future.h  default_executor.cpp  default_executor.h  inline_executor.cpp  inline_executor.h  ready_future.h  small_vector_include.h  stop_token.h  then.h  tuple_algorithm.h  when_all.h  when_any.h  when_any_result.h
source/futures/executor/: default_executor.cpp  default_executor.h  inline_executor.cpp  inline_executor.h  is_executor.h  new_thread_executor.h
source/futures/futures/: async.h  await.h  basic_future.h  future_error.h  launch.h  packaged_task.h  promise.h  stop_token.h  wait_for_all.h  wait_for_any.h
source/futures/impl/: asio-compile.h
source/single-header/futures/: futures.h
src/: CMakeLists.txt
src/futures/: src.cpp
src/futures-compiled/: src.cpp
test/benchmark/: CMakeLists.txt  eager_vs_deferred.cpp
test/integration/cmake_fetch/: CMakeLists.txt
test/integration/cmake_package/: CMakeLists.txt
test/integration/cmake_subdir/: CMakeLists.txt
test/integration/compiled/: CMakeLists.txt  main.cpp
test/integration/header_only/: CMakeLists.txt
test/stress/: CMakeLists.txt  launch.cpp  stress.hpp
tests/integration/cmake_package/: CMakeLists.txt
tests/stress/: CMakeLists.txt  launch.cpp  stress.hpp  wait.cpp
tests/unit/: CMakeLists.txt  algorithm.cpp  asio_executors.cpp  await.cpp  cancel_futures.cpp  catch_main.cpp  config.cpp  conjunction.cpp  continuation_stop.cpp  continuations.cpp  disjunction.cpp  exceptions.cpp  executor.cpp  future.cpp  future_error.cpp  future_options_args.cpp  futures-algorithm.cpp  futures.cpp  futures_types.cpp  is_ready.cpp  launch.cpp  make_ready.cpp  operation_state.cpp  packaged_task.cpp  promise.cpp  queue.cpp  shared_futures.cpp  traits.cpp  wait.cpp  wait_for_all.cpp  wait_for_any.cpp
tests/unit/algorithm/: count.cpp  (+13 more)
tests/unit_tests/: CMakeLists.txt  asio_executors.cpp  async_overloads.cpp  cancel_futures.cpp  conjunction.cpp  continuation_stop.cpp  continuations.cpp  disjunction.cpp  exceptions.cpp  futures-algorithm.cpp  futures.cpp  futures_types.cpp  launch.cpp  make_ready.cpp  queue.cpp  shared_futures.cpp  shared_state.cpp  wait.cpp
(+2860 files in other folders)
